force-app/main/default/objects/Sub_Application__c/Sub_Application__c.object-meta.xml
<CustomObject>
    <label>Sub-Application</label>
    <nameField>
        <displayFormat>SAP-{000000}</displayFormat>
        <label>Sub-Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub-Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>