force-app/main/default/objects/Sub_Application__c/fields/Case_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Application_Id__c</fullName>
    <description>This field is used as external ID to store the Case Application ID pulled from CityWorks via OIC.</description>
    <externalId>true</externalId>
    <label>Case Application Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>