force-app/main/default/objects/Sub_Application__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <externalId>true</externalId>
    <label>Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>