force-app/main/default/objects/Sub_Application__c/fields/Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>Permit_Type__c</fullName>
    <label>Permit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Streets</fullName>
            </value>
            <value>
                <fullName>Parks</fullName>
            </value>
            <value>
                <fullName>Park Permit</fullName>
                <isActive>false</isActive>
                <label>Park Permit</label>
            </value>
            <value>
                <fullName>Street Permit</fullName>
                <isActive>false</isActive>
                <label>Street Permit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>