force-app/main/default/objects/Sub_Application__c/fields/Service_Application_Detail__c.field-meta.xml
<CustomField>
    <fullName>Service_Application_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Application Detail</label>
    <referenceTo>Service_Application_Detail__c</referenceTo>
    <relationshipLabel>Sub-Applications</relationshipLabel>
    <relationshipName>Sub_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>