force-app/main/default/objects/Sub_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Permit_Type__c</columns>
    <columns>Fee__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Permit_Type__c</field>
        <operation>equals</operation>
        <value>Streets</value>
    </filters>
    <label>All</label>
</ListView>